as per client set fix height to images on the gallery when on mobile

--- a/src/scss/parts/acf/_gallery-grid.scss
+++ b/src/scss/parts/acf/_gallery-grid.scss
@@ -6,8 +6,16 @@
       position: relative;
       width: 100%;
       height: auto;
+      margin: 1vw 0;
+      padding-top: 54.6%;
+      overflow: hidden;
 
       img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+
         display: block;
         width: 100%;
         height: 100%;
@@ -55,6 +63,12 @@
           margin: 1vw;
           width: auto;
           height: 400px;
+
+          padding-top: 0;
+
+          img {
+            position: relative;
+          }
 
           @for $i from 1 through 12 {
             $width: ($i / 12) * 100 + %;
